# neocalc

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/acalc/interface/: interface.hpp
include/acalc/math/: math.hpp
include/neocalc/math/: math.hpp
src/: main.cpp
src/acalc/interface/: interface.cpp
src/neocalc/interface/: interface.cpp
